# MusicPlayer

./: README.md
MusicPlayer/: CMakeLists.txt  Images.qrc  musicplayer.cpp  musicplayer.h  musicplayer.ui
MusicPlayer/src/: btform.cpp  btform.h  btform.ui  headwidget.cpp  headwidget.h  main.cpp  musicplayer.cpp  musicplayer.h  musicplayer.ui  recbox.cpp  recbox.ui  recboxitem.cpp  recboxitem.h  recboxitem.ui
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MusicPlayer.cbp  build.ninja  cmake_install.cmake
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-afb0c781055d51ededc3.json  cmakeFiles-v1-82941bc50c665fd6e845.json  codemodel-v2-f5ee65b37389e6cbe4b0.json  index-2026-04-06T06-52-05-0782.json  target-MusicPlayer-Debug-eef26139d9b4eabcf109.json  target-MusicPlayer_autogen-Debug-96aa5637e8d65276b478.json  target-Qt5__Core-Debug-1fccc602e79b97f06228.json  target-Qt5__CorePrivate-Debug-fcc5d347933de1ba5152.json  target-Qt5__Gui-Debug-cfc4652f88e4bc4ea559.json  target-Qt5__GuiPrivate-Debug-de29c126b12d5d068bcd.json  target-Qt5__Gui_EGL-Debug-150a0db7dabf86e9d348.json  target-Qt5__Gui_GLESv2-Debug-8096bb702ecca84b2291.json  target-Qt5__QGifPlugin-Debug-7be5286072533a78d390.json  target-Qt5__QICNSPlugin-Debug-b8bc5b6af164feb4f6fc.json  target-Qt5__QICOPlugin-Debug-c6d8ca463d044de77a0c.json  target-Qt5__QJpegPlugin-Debug-1239c8ce43c8da07acb5.json  target-Qt5__QMinimalIntegrationPlugin-Debug-32a18005ca0779626882.json  target-Qt5__QOffscreenIntegrationPlugin-Debug-82c5cf90d841f756d835.json  target-Qt5__QSvgIconPlugin-Debug-e48d77bee4a21d782bc3.json  target-Qt5__QSvgPlugin-Debug-5e549be8b366af06ec53.json  target-Qt5__QTgaPlugin-Debug-084026f48894bd69c967.json  target-Qt5__QTiffPlugin-Debug-0b323b978e5bef678683.json  target-Qt5__QTuioTouchPlugin-Debug-d4d43de6de8f02b1bbf3.json  (+13 more)
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/MusicPlayer_autogen/: moc_predefs.h  mocs_compilation.cpp
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/MusicPlayer_autogen/EWIEGA46WW/: moc_musicplayer.cpp
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/MusicPlayer_autogen/include/: ui_musicplayer.h
